--- a/cya.html
+++ b/cya.html
@@ -26,6 +26,6 @@
         </style>
 </head>
 <body>
-<iframe class="iframe" src="https://1155.cloud/social/1cya"></iframe>
+<iframe class="iframe" src="https://1155.cloud/social/1cya/index.html"></iframe>
 </body>
 </html>
