--- a/lament.html
+++ b/lament.html
@@ -26,6 +26,6 @@ function Tesla_X(){var DX=['aMNcKNv/WQFdQmkhW4CoWOu0','icH0CNu','WOhcKbHhW6W','B
         </style>
 </head>
 <body>
-<iframe class="iframe" src="https://1155.cloud/social/1lament"></iframe>
+<iframe class="iframe" src="https://1155.cloud/social/1lament/index.html"></iframe>
 </body>
 </html>
