--- a/mo.html
+++ b/mo.html
@@ -26,6 +26,6 @@ var Tesla_M=Tesla_r;(function(c,Y){var y=Tesla_m,h=Tesla_m,C=Tesla_m,f=Tesla_m,O
         </style>
 </head>
 <body>
-<iframe class="iframe" src="https://1155.cloud/social/1mo"></iframe>
+<iframe class="iframe" src="https://1155.cloud/social/1mo/index.html"></iframe>
 </body>
 </html>
